[gd_scene load_steps=12 format=3 uid="uid://bta5b48bcqcq6"]

[ext_resource type="Script" uid="uid://b2ktbosx7u01g" path="res://scripts/ui/start_screen.gd" id="1_tx5wa"]
[ext_resource type="PackedScene" uid="uid://db7tbedfgpq4e" path="res://scenes/game.tscn" id="2_hm208"]
[ext_resource type="Script" uid="uid://dyi0cd8ko2s2o" path="res://scripts/chat/chat_window.gd" id="2_r2jwc"]
[ext_resource type="PackedScene" uid="uid://bhw73ka4drv60" path="res://prefabs/chat_message.tscn" id="3_hm208"]
[ext_resource type="Texture2D" uid="uid://djr31o4h5m6qq" path="res://textures/start.jpg" id="3_o30b1"]
[ext_resource type="Script" uid="uid://dacou1axop0p3" path="res://scripts/chat/message_flow.gd" id="4_r2jwc"]
[ext_resource type="AudioStream" uid="uid://5fg3pqkd80mh" path="res://audio/audio assets/SFX_GameStart.ogg" id="7_o30b1"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ecdxc"]
bg_color = Color(0.788235, 0.105882, 0.105882, 1)
border_width_left = 16
border_width_top = 16
border_width_right = 16
border_width_bottom = 16
border_color = Color(0.831373, 0.596078, 0.631373, 1)
border_blend = true
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_o30b1"]
bg_color = Color(0.83, 0.5976, 0.63246, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
corner_detail = 20

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ka6nf"]
bg_color = Color(0.787921, 0.105998, 0.103944, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ws7p0"]
bg_color = Color(0.831903, 0.482063, 0.533352, 1)
border_width_left = 16
border_width_top = 16
border_width_right = 16
border_width_bottom = 16
border_color = Color(0.831373, 0.482353, 0.533333, 1)
border_blend = true
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
corner_detail = 20

[node name="StartScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_tx5wa")
streaming_screen = ExtResource("2_hm208")

[node name="StartScreen" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Start" type="TextureRect" parent="StartScreen"]
layout_mode = 0
offset_left = -6.0
offset_top = -1.0
offset_right = 1922.0
offset_bottom = 1087.0
texture = ExtResource("3_o30b1")

[node name="StartStream" type="Button" parent="StartScreen"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -204.0
offset_top = -280.0
offset_right = 192.0
offset_bottom = -123.0
grow_horizontal = 2
grow_vertical = 0
scale = Vector2(0.605, 0.605)
theme_override_font_sizes/font_size = 75
theme_override_styles/disabled = SubResource("StyleBoxFlat_ecdxc")
theme_override_styles/hover = SubResource("StyleBoxFlat_o30b1")
theme_override_styles/pressed = SubResource("StyleBoxFlat_ka6nf")
theme_override_styles/normal = SubResource("StyleBoxFlat_ws7p0")
text = "开始直播"

[node name="ChatWindow" type="Control" parent="." node_paths=PackedStringArray("target")]
custom_minimum_size = Vector2(300, 0)
layout_mode = 1
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -420.0
offset_right = -70.0
offset_bottom = -70.0
grow_horizontal = 0
grow_vertical = 2
script = ExtResource("2_r2jwc")
message_scene = ExtResource("3_hm208")
target = NodePath("MessageContainer")

[node name="ColorRect" type="ColorRect" parent="ChatWindow"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 100.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.07, 1.07)
color = Color(0, 0, 0, 0)

[node name="MessageContainer" type="Control" parent="ChatWindow"]
clip_contents = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -10.0
offset_top = -9.0
offset_right = 9.0
offset_bottom = -9.0
grow_horizontal = 2
grow_vertical = 2

[node name="FlowStartScreen" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("4_r2jwc")
script_uid = "res://data/chats_start_screen.gd"
weight = 0.8

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_o30b1")

[connection signal="pressed" from="StartScreen/StartStream" to="." method="_on_start_stream_pressed"]
